--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,7 +10,7 @@
 	Audition Club is for singers who want to practice their audition repertoire in front of an informal audience. We also welcome any 'observers' who would like to just be in the audience and listen.
 	<p>
 	<b>Cost:</b><br>
-	£8 per session for singers.
+	£9 per session.
 	<p> 
 	<b>Booking & Attendance:</b><br>
 	You will need to commit to attending and the cost. That is why you are being asked to pay upfront for each session. 
