streamline checkout and activeadmin

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,7 +5,7 @@
 	<h1>About</h1>
 
 	<p>
-		This site was built by <a target="_blank" href="http://www.weihsi.hu.com">WeiHsi</a>.
+		This is a prototype for a course booking platform which allows students to sign up to multiple sessions in one combined booking process. This site was built by <a target="_blank" href="http://www.weihsi.hu.com">WeiHsi</a>.
 	</p>
 
 		<div class="col-xs-12 col-sm-4">
