--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -6,26 +6,34 @@
 	<h1>Audition Club</h1>
 	<%= image_tag 'lego-opera2.jpg', :class => 'img-responsive', :alt => 'Lego Opera Singer' %>
 	<br />
-	<p>
+	<div class = 'description'>
 	Audition Club is for singers who want to practice their audition repertoire in front of an informal audience. We also welcome any 'observers' who would like to just be in the audience and listen.
+	</div>
+	<h2>Details</h2>
+	<h4>Cost:</h4>
+		£9 per session.
+	<br />
+	<br />
+	<h4>Booking & Attendance:</h4>
+		You can book the sessions up to 7 days before each session. To book, go to <%= link_to 'Sessions', course_path(1) %> and you can book the sessions you want to attend.
 	<p>
-	<b>Cost:</b><br>
-	£9 per session.
-	<p> 
-	<b>Booking & Attendance:</b><br>
-	You will need to commit to attending and the cost. That is why you are being asked to pay upfront for each session. 
-	<p>
-	You can book the sessions up to 7 days before each session. To book, click on the session tab and you can book the session all together or separately.
-	<p>
-	There are ways to manage if you cannot attend.Please see the FAQ section for more suggestions.
-	<p> 
-	<b>Pianist:</b><br>
-	There will be a professional pianist that will be able to sight-read your music. But if your music is really difficult, they would appreciate if you can let the pianist know ahead of time.
-	<p>
-	<b>At each session:</b><br>
-	The sessions will have at least 4 singers. That means we will have about 10 to 15 min each person (give or take with setup/takedown). We break the sessions up and cycle through the 4 singers. That means you get to sing your songs a 2nd time after your nerves have calmed down. But ultimately it is up to you on how you'd like to use your 15 min.
-	<p> 
-	<b>To make it interesting & meet our objectives:</b><br>
-	Some of the reasons that auditions are horrible is because we have to sing in front of strangers, and that is a learned skill. So, I think we would welcome people to bring friends to the session, so we keep the faces fresh and our nerves on tip-top form.
+		By signing up, you commit to attending the session. If you cancel 7 days before the session, the cost can be be fully refunded.
 	</p>
+	<p>
+		There are ways to manage if you cannot attend. Please see the <%= link_to 'FAQ', faq_path %> section for more suggestions.
+	</p> 
+	<br />
+	<h4>Pianist:</h4>
+		There will be a professional pianist that can sight-read your music. There won't be an opportunity to rehearse with the pianist, but we will put you in touch with the pianist. If your music is really difficult, they would appreciate knowing the piece(s) ahead of time.
+	<br />
+	<br />
+	<h4>At each session:</h4>
+		The sessions will have at least 4 singers. That means we will have about 10 to 15 min each person (give or take with setup/takedown). We break the sessions up and cycle through the 4 singers. That means you get to sing your songs a 2nd time after your nerves have calmed down. But ultimately it is up to you on how you'd like to use your 15 min.
+	<br />
+	<br />
+	<h3>To make it interesting & meet our objectives:</h3>
+		One of the reasons that auditions are horrible is because we have to sing in front of strangers, and that is a learned skill. So, we welcome people to bring friends to the session, so we keep the faces fresh and our nerves on tip-top form.
+	<br />
 </div>
+<br />
+<br />
