--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Enrol</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <meta name="google-site-verification" content="ie6pa3q2ANYKeaXChYtSc06ICli8pEaUh2IQvXdmyeo" />
   <%= csrf_meta_tags %>
 <body>
 <br />
