--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -34,6 +34,7 @@
 	<h3>To make it interesting & meet our objectives:</h3>
 		One of the reasons that auditions are horrible is because we have to sing in front of strangers, and that is a learned skill. So, we welcome people to bring friends to the session, so we keep the faces fresh and our nerves on tip-top form.
 	<br />
+	<%= link_to 'Teach a course', new_instructor_course_path %>
 </div>
 <br />
 <br />
